--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,6 +1,6 @@
-<div style="background-color: rgb(125, 181, 131); height: 20px;">
+<nav style="background-color: rgb(125, 181, 131); height: 20px;">
 
-</div>
+</nav>
 <!-- user nav -->
 <nav>
     <div class="nav-plus container">
