--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -80,6 +80,7 @@ wrap > container > grid
   .container
   {
     width: 1280px;
+    /* width: 1500px; */
     margin: auto;
   }
 }
@@ -96,8 +97,8 @@ wrap > container > grid
     grid-gap: 60px 30px;
     grid-template-columns: repeat(auto-fit, minmax(200px, auto));
     grid-template-rows: auto;
-    margin-top: 3%;
-    margin-bottom: 6%;
+    /* margin-top: 3%; */
+    /* margin-bottom: 6%; */
     justify-content: space-evenly;
   }
   .grid-listing
