--- a/static/css/module.css
+++ b/static/css/module.css
@@ -39,7 +39,7 @@ wrap > container > grid
 
 .product-info
 {
-  background-color: #f5f5f5;
+  background-color: #fafafa;
   border-radius: 6px;
   margin: 0 15px;
   padding: 3%;
