--- a/templates/nav.html
+++ b/templates/nav.html
@@ -20,7 +20,8 @@
                 <li><a href="{{ nav_account.login.0 }}">{{ user_account }}</a></li>
                 {% endif %} -->
             </ul>
-            <div id="hei" style="line-height: 55px;"></div>
+            <!-- test client & body width/height -->
+            <!-- <div id="hei" style="line-height: 55px;"></div> -->
         </div>
         <div class="account flex-container">
             <ul>
