--- a/static/css/module.css
+++ b/static/css/module.css
@@ -76,36 +76,40 @@ wrap > container > grid
 /* 
 widget
 */
-.position
+.banner-tip
 {
   position: relative; 
-  top: 30%; 
+  top: 25%; 
   left: 25%; 
   width: 50%; 
-  min-height: 100px; 
-  padding: 30px;
+  height: 50%; 
   background: rgb(0, 0, 0, 0.2);
   border-radius: 10px;
   color: #fff;
 }
-.position > div
+.banner-tip > div
 {
   /* min-height: 60px; */
-  padding: 10px;
+  margin-bottom: 3%;
   text-align: center;
+}
+.banner-tip > div:first-child
+{
+  padding-top: 2%;
 }
 .learnMore
 {
   display: block;
   /* width: 130px; */
   width: 30%;
-  height: 35px;
-  line-height: 35px;
-  border-radius: 17.5px;
+  height: 39px;
+  line-height: 39px;
+  border-radius: 18px;
   background-color: rgba(126, 197, 149, 0.8);
+  font-size: 20px;
+  font-weight: 350;
   color: #fff;
   text-align: center;
-  
 }
 /*************************************************LINE*************************************************/
 /*************************************************
@@ -196,7 +200,7 @@ Screen: for mobile, width under 980px
  *************************************************/
 @media screen and (max-width:980px)
 {
-  .position
+  .banner-tip
   {
     position: relative; 
     top: 25%; 
@@ -208,7 +212,7 @@ Screen: for mobile, width under 980px
     border-radius: 10px;
     color: #fff;
   }
-  .position > div
+  .banner-tip > div
   {
     /* min-height: 60px; */
     padding: 10px;
