banner move update

--- a/templates/nav.html
+++ b/templates/nav.html
@@ -31,7 +31,7 @@
             <li><a href="{{ nav_account.cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></li>
             {% else %}
             <li><a href="{{ nav_account.login.0 }}">{{ nav_account.login.1 }}</a></li>
-            <!-- <div><a href="{{ nav_account.cart.0 }}">{{ nav_account.cart.1 }}</a></div> -->
+            <!-- <li><a href="{{ nav_account.cart.0 }}">{{ nav_account.cart.1 }}</a></li> -->
             <li><a href="{{ nav_account.cart.0 }}" class="material-symbols-outlined size-30">shopping_cart</a></li>
             {% endif %}
             <!-- {% if user_account %}
