--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,9 @@
     
     {% include "nav.html" %}
 
-    <div id="bannerr" style="width:100%; height:680px; overflow: hidden; position: relative;">
     <!-------- promote-banner --------->
-        <div id="banner-container" style="height:680px; display: flex; position: relative; left: 100px;">
+    <div id="bannerr" style="width:100%; height:680px; overflow: hidden; position: relative;">
+        <div id="banner-container" style="height:680px; display: flex; position: relative; left: 0;">
             <div id="1" name="B0BZ3MGYXL" style="height:680px; background: url('/static/image/show/B0BZ3MGYXL/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
             <div id="2" name="B0C6F3CK4F" style="height:680px; background: url('/static/image/show/B0C6F3CK4F/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
             <div id="3" name="B0BTWT5GL8" style="height:680px; background: url('/static/image/show/B0BTWT5GL8/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
@@ -30,7 +30,8 @@
                     <h2>{{ promote_info.bullet_point_02 }}</h2>
                 </div>
                 <div>
-                    <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3>
+                    <h3><a onclick="move_img()" class="learnMore auto-margin">Learn more</a></h3>
+                    <!-- <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3> -->
                 </div>
             </div>
         <!-- </div> -->
