--- a/templates/index.html
+++ b/templates/index.html
@@ -5,38 +5,37 @@
 {% include "head.html" %}
 <title>ME AND ME. LEO</title>
 </head>
-<body page_id="{{ page_id }}">
+<body page_id="{{ page_id }}" onload="setBanner()">
     
     {% include "nav.html" %}
 
     <!-------- promote-banner --------->
-    <div id="bannerr" style="width:100%; height:680px; overflow: hidden; position: relative;">
-        <div id="banner-container" style="height:680px; display: flex; position: relative; left: 0;">
-            <div id="1" name="B0BZ3MGYXL" style="height:680px; background: url('/static/image/show/B0BZ3MGYXL/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
+    <div id="banner" style="width:100%; height:680px; overflow: hidden; position: relative;">
+        <div id="banner-container" style="display: flex; position: relative; left: 0px;">
+            <div id="1" name="B0BZ3MGYXL" style="height:680px; background: url('/static/image/show/B0BZ3MGYXL/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;">
+                <!-- <div id="leo" class="banner-tip">
+                    <div>
+                        <h1 class="stronger">{{ promote_info.bullet_point_01 }}</h1>
+                    </div>
+                    <div>
+                        <span>{{ promote_info.bullet_point_02 }}</span>
+                        <h2>{{ promote_info.bullet_point_02 }}</h2>
+                    </div>
+                    <div>
+                        <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
+                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3>
+                    </div>
+                </div> -->
+            </div>
             <div id="2" name="B0C6F3CK4F" style="height:680px; background: url('/static/image/show/B0C6F3CK4F/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
             <div id="3" name="B0BTWT5GL8" style="height:680px; background: url('/static/image/show/B0BTWT5GL8/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
+            <div id="4" name="B0C1MVT741" style="height:680px; background: url('/static/image/show/B0C1MVT741/1-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
         </div>
     </div>
     <!-------- promote-banner --------->
-    <div id="banner" name="B0BTXB89PG" class="wrap" img_name="{{ img_name.B0BTXB89PG }}">
+    <!-- <div id="banner-02" name="B0BTXB89PG" class="wrap" img_name="{{ img_name.B0BTXB89PG }}"></div> -->
 
-        <!-- <div style="box-shadow: inset 0px -1px 30px 1px rgb(0, 0, 0, 0.3); height: 100%;"> -->
-            <div class="banner-tip">
-                <div>
-                    <h1 class="stronger">{{ promote_info.bullet_point_01 }}</h1>
-                </div>
-                <div>
-                    <span>{{ promote_info.bullet_point_02 }}</span>
-                    <h2>{{ promote_info.bullet_point_02 }}</h2>
-                </div>
-                <div>
-                    <h3><a onclick="move_img()" class="learnMore auto-margin">Learn more</a></h3>
-                    <!-- <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3> -->
-                </div>
-            </div>
-        <!-- </div> -->
-        
-    </div>
+
 
     <!---------- promote-sku ---------->
     <div class="wrap">
