--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav style="background-color: rgb(125, 181, 131); height: 20px;">
+<nav id="demo" style="background-color: rgb(125, 181, 131); height: 20px;">
 
 </nav>
 <!-- user nav -->
