--- a/static/css/main.css
+++ b/static/css/main.css
@@ -44,6 +44,11 @@ body > main
 nav
 {
   background: #f5f5f5;
+  /* background: rgba(253, 253, 253, 0.2); */
+  width: 100%;
+  /* position: absolute;
+  top: 0;
+  z-index: 1; */
 }
 nav > .nav-plus
 {
