--- a/templates/index.html
+++ b/templates/index.html
@@ -12,8 +12,13 @@
     <!-------- promote-banner --------->
     <div id="banner" style="width:100%; height:680px; overflow: hidden; position: relative;">
         <div id="banner-container" style="display: flex; position: relative; left: 0px;">
-            <div id="1" name="B0BZ3MGYXL" style="height:680px; background: url('/static/image/show/B0BZ3MGYXL/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;">
+            <div name="B0BZ3MGYXL" style="height:680px; background: url('/static/image/show/B0BZ3MGYXL/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;">
                 <!-- <div id="leo" class="banner-tip">
+                    test
+                </div> -->
+            </div>
+            <div name="B0C6F3CK4F" style="height:680px; background: url('/static/image/show/B0C6F3CK4F/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;">
+                <!-- <div class="banner-tip">
                     <div>
                         <h1 class="stronger">{{ promote_info.bullet_point_01 }}</h1>
                     </div>
@@ -27,9 +32,8 @@
                     </div>
                 </div> -->
             </div>
-            <div id="2" name="B0C6F3CK4F" style="height:680px; background: url('/static/image/show/B0C6F3CK4F/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
-            <div id="3" name="B0BTWT5GL8" style="height:680px; background: url('/static/image/show/B0BTWT5GL8/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
-            <div id="4" name="B0C1MVT741" style="height:680px; background: url('/static/image/show/B0C1MVT741/1-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
+            <div name="B0BTWT5GL8" style="height:680px; background: url('/static/image/show/B0BTWT5GL8/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
+            <div name="B0C1MVT741" style="height:680px; background: url('/static/image/show/B0C1MVT741/1-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
         </div>
     </div>
     <!-------- promote-banner --------->
