--- a/templates/index.html
+++ b/templates/index.html
@@ -10,15 +10,10 @@
     {% include "nav.html" %}
 
     <!-------- promote-banner --------->
-    <div id="banner" style="width:100%; height:680px; overflow: hidden; position: relative;">
-        <div id="banner-container" style="display: flex; position: relative; left: 0px;">
-            <div name="B0BZ3MGYXL" style="height:680px; background: url('/static/image/show/B0BZ3MGYXL/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;">
-                <!-- <div id="leo" class="banner-tip">
-                    test
-                </div> -->
-            </div>
-            <div name="B0C6F3CK4F" style="height:680px; background: url('/static/image/show/B0C6F3CK4F/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;">
-                <!-- <div class="banner-tip">
+    <div id="banner" style="height:680px; overflow: hidden; position: relative;">
+        <div id="banner-container" style="display: flex; position: relative; left: 0px; background-color: #fff000;">
+            <div name="B0BZ3MGYXL" style="width: 100%; height:680px; background: url('/static/image/show/B0BZ3MGYXL/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;">
+                <div id="leo" class="banner-tip">
                     <div>
                         <h1 class="stronger">{{ promote_info.bullet_point_01 }}</h1>
                     </div>
@@ -28,16 +23,63 @@
                     </div>
                     <div>
                         <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
-                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3>
+                        <!-- <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3> -->
                     </div>
-                </div> -->
+                </div>
             </div>
-            <div name="B0BTWT5GL8" style="height:680px; background: url('/static/image/show/B0BTWT5GL8/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
-            <div name="B0C1MVT741" style="height:680px; background: url('/static/image/show/B0C1MVT741/1-A+-970.jpg') no-repeat 50% 50%; background-size: cover;"></div>
+            <div name="B0C6F3CK4F" style="height:680px; background: url('/static/image/show/B0C6F3CK4F/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;">
+                <div id="2" class="banner-tip" style="display: none;">
+                    <div>
+                        <h1 class="stronger">{{ promote_info.bullet_point_01 }}</h1>
+                    </div>
+                    <div>
+                        <span>{{ promote_info.bullet_point_02 }}</span>
+                        <h2>{{ promote_info.bullet_point_02 }}</h2>
+                    </div>
+                    <div>
+                        <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
+                        <!-- <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3> -->
+                    </div>
+                </div>
+            </div>
+            <div name="B0BTWT5GL8" style="height:680px; background: url('/static/image/show/B0BTWT5GL8/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;">
+                <div id="3" class="banner-tip" style="display: none;">
+                    <div>
+                        <h1 class="stronger">{{ promote_info.bullet_point_01 }}</h1>
+                    </div>
+                    <div>
+                        <span>{{ promote_info.bullet_point_02 }}</span>
+                        <h2>{{ promote_info.bullet_point_02 }}</h2>
+                    </div>
+                    <div>
+                        <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
+                        <!-- <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3> -->
+                    </div>
+                </div>
+            </div>
+            <div name="B0C1MVT741" style="height:680px; background: url('/static/image/show/B0C1MVT741/1-A+-970.jpg') no-repeat 50% 50%; background-size: cover;">
+                <div id="4" class="banner-tip" style="display: none;">
+                    <div>
+                        <h1 class="stronger">{{ promote_info.bullet_point_01 }}</h1>
+                    </div>
+                    <div>
+                        <span>{{ promote_info.bullet_point_02 }}</span>
+                        <h2>{{ promote_info.bullet_point_02 }}</h2>
+                    </div>
+                    <div>
+                        <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
+                        <!-- <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3> -->
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     <!-------- promote-banner --------->
-    <!-- <div id="banner-02" name="B0BTXB89PG" class="wrap" img_name="{{ img_name.B0BTXB89PG }}"></div> -->
+    <!-- <div style="height:680px; background: url('/static/image/show/B0BZ3MGYXL/2-A+-970.jpg') no-repeat 50% 50%; background-size: cover;">
+        <div id="leo" class="banner-tip">
+            test
+        </div>
+    </div> -->
 
 
 
