--- a/templates/index.html
+++ b/templates/index.html
@@ -22,8 +22,8 @@
                         <h2>{{ promote_info.bullet_point_02 }}</h2>
                     </div>
                     <div>
-                        <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
-                        <!-- <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3> -->
+                        <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
+                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3>
                     </div>
                 </div>
             </div>
@@ -37,8 +37,8 @@
                         <h2>{{ promote_info.bullet_point_02 }}</h2>
                     </div>
                     <div>
-                        <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
-                        <!-- <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3> -->
+                        <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
+                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3>
                     </div>
                 </div>
             </div>
@@ -52,8 +52,8 @@
                         <h2>{{ promote_info.bullet_point_02 }}</h2>
                     </div>
                     <div>
-                        <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
-                        <!-- <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3> -->
+                        <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
+                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3>
                     </div>
                 </div>
             </div>
@@ -67,8 +67,8 @@
                         <h2>{{ promote_info.bullet_point_02 }}</h2>
                     </div>
                     <div>
-                        <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3>
-                        <!-- <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3> -->
+                        <!-- <h3><a onclick="moveImg()" class="learnMore auto-margin">Learn more</a></h3> -->
+                        <h3><a href="{{ promote_info.promote_url }}" class="learnMore auto-margin">Learn more</a></h3>
                     </div>
                 </div>
             </div>
@@ -89,11 +89,11 @@
             <div style="height: 500px; width: 50%; text-align: center;"><img src="{{ product_info.6.first_img }}" style="width: auto; height: 100%;" alt=""></div>
             <div style="height: 100%; width: 50%;">
                 <div style="margin-bottom: 3%;"><h1>{{ product_info_title.0 }}</h1></div>
-                <div style="margin-bottom: 9%;"><h3>{{ product_info_title.1 }}</h3></div>
-                <div style="margin-bottom: 9%;"><h3>{{ product_info_title.2 }}</h3></div>
+                <div style="margin-bottom: 3%;"><h3>{{ product_info_title.1 }}</h3></div>
+                <div style="margin-bottom: 3%;"><h3>{{ product_info_title.2 }}</h3></div>
                 <div style="margin-bottom: 9%;"><h3>{{ product_info_title.3 }}</h3></div>
-                <div style="margin-bottom: 9%;"><h4>{{ product_info_title }}</h4></div>
-                <div style="margin-bottom: 9%;">
+                <!-- <div style="margin-bottom: 9%;"><h4>{{ product_info_title }}</h4></div> -->
+                <div style="margin-bottom: 3%;">
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
                         <span class="price-int">{{ product_info.6.price }}</span>
@@ -109,7 +109,7 @@
         <div class="container grid-container products-shelf">
             <div class="margin-around">
                 <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.5.first_img }}" alt=""></a></div>
-                <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}" title="{{ product_info.5.title }}" class="display-row-3"><h1>{{ product_info.5.title }}</h1></a></div>
+                <div><a href="products&asin={{ product_info.5.asin }}{{ includ_user_id_url }}" title="{{ product_info.5.title }}" class="display-row-3">{{ product_info.5.title }}</a></div>
                 <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
@@ -117,13 +117,13 @@
                         <span class="price-float"></span>
                     </span>
                 </div>
-                <div>
+                <!-- <div>
                     <span class="coupon">Coupon: 20% off</span>
-                </div>
+                </div> -->
             </div>
             <div class="margin-around">
                 <div><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.6.first_img }}" alt=""></a></div>
-                <div><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}" title="{{ product_info.6.title }}" class="display-row-3"><h1>{{ product_info.6.title }}</h1></a></div>
+                <div><a href="products&asin={{ product_info.6.asin }}{{ includ_user_id_url }}" title="{{ product_info.6.title }}" class="display-row-3">{{ product_info.6.title }}</a></div>
                 <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
@@ -142,9 +142,9 @@
                         <span class="price-float"></span>
                     </span>
                 </div>
-                <div>
+                <!-- <div>
                     <span class="coupon">Coupon: 20% off</span>
-                </div>
+                </div> -->
             </div>
             <div class="margin-around">
                 <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.8.first_img }}" alt=""></a></div>
@@ -158,12 +158,12 @@
                 </div>
             </div>
             <div class="margin-around">
-                <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.8.first_img }}" alt=""></a></div>
+                <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}"><img src="{{ product_info.9.first_img }}" alt=""></a></div>
                 <div><a href="products&asin={{ product_info.8.asin }}{{ includ_user_id_url }}" title="{{ product_info.8.title }}" class="display-row-3">{{ product_info.8.title }}</a></div>
                 <div>
                     <span class="flex-container price">
                         <span class="price-symbol">$</span>
-                        <span class="price-int">{{ product_info.8.price }}</span>
+                        <span class="price-int">{{ product_info.9.price }}</span>
                         <span class="price-float"></span>
                     </span>
                 </div>
