--- a/templates/listing.html
+++ b/templates/listing.html
@@ -50,9 +50,9 @@
                     </span>
                 </div>
                 <div><a href="{{ amazon }}" target="_blank" class="widget-btn">Buy on Amazon</a></div>
-                <div>
+                <!-- <div>
                     <span class="coupon">Coupon: 20% off | {{ product_info.asin }} | {{ product_info.status }}</span>
-                </div>
+                </div> -->
                 <div>
                     <ul class="bullet-point">
                         {% for bullet_point in product_bullet_point %}
