--- a/templates/products.html
+++ b/templates/products.html
@@ -26,9 +26,9 @@
                         <span class="price-float"></span>
                     </span>
                 </div>
-                <div>
+                <!-- <div>
                     <span class="coupon">Coupon: 20% off</span>
-                </div>
+                </div> -->
             </div>
             {% endfor %}
         </div>
