--- a/templates/done.html
+++ b/templates/done.html
@@ -18,7 +18,7 @@
             
             <div style="margin: 20px 0 20px 0;">
                 <a style="font-size: 20px;" href="{{ products }}" target="_blank">Shopping</a> | 
-                <a style="font-size: 20px;" href="{{ nav_account.myAccount.0 }}">Check Account:  {{ user_account }}</a>
+                <a style="font-size: 20px;" href="{{ nav_account.account.0 }}">Check Account:  {{ user_account }}</a>
             </div>
             <!-- <div><img src="{{ img }}" alt=""></div> -->
         </div>
